fixed hero-img overflow

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@ section{
     text-align: center;
 }
 .hero-img{
-    width: 395px;
-    height: 232px;
+    width: 100%;
+    height: 200px;
 }
 .hero-title{
     font-weight: 600;
